# tauri_gardesh

./: .gitignore  .gitmodules  .taurignore  404.html  Cargo.toml  Trunk.toml  data.json  index.html  leptosfmt.toml  neshan_history_results.json  neshan_museum_resaults.json  neshan_restaurant_results.json  rust-toolchain.toml  styles.css  tauri_gardesh-ui.js  tauri_gardesh-ui_bg.wasm
.github/workflows/: james.yaml
gemini_model_compare/: gemini 2.txt  gemini flash 1.5.txt  gemini pro 1.5.txt
src/: app.rs  groq_impl.rs  lib.rs  main.rs  neshan_history_results_unique_with_tags_translated.json  neshan_museum_results_unique_with_tags_translated.json  neshan_restaurant_results_unique_with_tags_translated.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/fastembed-2/note_embeddings.lance/_transactions/: 0-55d25e58-6c60-48cb-883f-2dbeb1ed5cc4.txn  1-1843d634-1cf4-402e-9b6d-db391ed11aa5.txn
src-tauri/fastembed-2/note_embeddings.lance/_versions/: 1.manifest  2.manifest
src-tauri/fastembed-2/note_embeddings.lance/data/: 8117b550-6046-439c-bdda-d91472347766.lance
src-tauri/fastembed-3/note_embeddings.lance/_transactions/: 0-8e70a794-39ea-4489-8caa-2f91b7324451.txn  1-13dc53ab-b610-41a8-b104-e199da668429.txn
src-tauri/fastembed-3/note_embeddings.lance/_versions/: 1.manifest  2.manifest
src-tauri/fastembed-3/note_embeddings.lance/data/: 210e2a65-2bc7-440e-a7aa-d380f2e46c45.lance
src-tauri/fastembed-history/note_embeddings.lance/_transactions/: 0-e55689e0-9be5-4993-9264-aa1d2fcbc10c.txn  1-8c2d111d-5fa3-4d6e-8411-f8d62b30bb7d.txn
src-tauri/fastembed-history/note_embeddings.lance/_versions/: 1.manifest  2.manifest
src-tauri/fastembed-history/note_embeddings.lance/data/: cf3f043c-183e-48a6-a63e-bd434eb41fc4.lance
src-tauri/fastembed-museum/note_embeddings.lance/_transactions/: 0-212c028c-2b91-4cf2-9eed-f54dc0090d63.txn  1-9adfb093-b6b0-4d7a-ad3e-d937c420166b.txn
src-tauri/fastembed-museum/note_embeddings.lance/_versions/: 1.manifest  2.manifest
src-tauri/fastembed-museum/note_embeddings.lance/data/: e728af00-575c-4caf-9616-c5058d6d1156.lance
src-tauri/fastembed-restaurant/note_embeddings.lance/_transactions/: 0-4c127dc2-0a73-46a0-905d-5e4889e93a5e.txn  1-09f7f903-f99e-47eb-9969-dfce8a5dfa9a.txn
src-tauri/fastembed-restaurant/note_embeddings.lance/_versions/: 1.manifest  2.manifest
src-tauri/fastembed-restaurant/note_embeddings.lance/data/: 39ec0c3d-76ac-4a21-b61b-bfd3615a4f94.lance
src-tauri/src/: analyze_prompt.txt  lib.rs  main.rs
src-tauri/src/taged_items/: neshan_history_results_unique_with_tags.json
src/components/: app.rs  mod.rs  place_card.rs  session.rs  session_content.rs  sidebar.rs  suggesions.rs  suggestion_item.rs
src/taged_items/: neshan_museum_results_unique_with_tags.json  neshan_restaurant_results_unique_with_tags.json
