[package]
name = "tauri_gardesh-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos/", features = ["csr"] }
reactive_stores = { git = "https://github.com/leptos-rs/leptos/" }
reactive_stores_macro = { git = "https://github.com/leptos-rs/leptos/" }
console_log = "1"
log = "0.4.22"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
web-sys = { version = "0.3.76", features = ["Storage"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
serde-wasm-bindgen = "0.6.5"
dotenvy_macro = "0.15.7"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
genai = { version = "0.1.18-WIP", path = "/home/mahdi/Projects/GitHub/genai-0.1.17" }
iter_tools = { version = "0.24.0", features = ["full"] }
derive_more = { version = "1.0.0", features = ["full"] }
better_default = "1.0.5"
# send_wrapper = "0.6.0"
# cursor = "2.3.0"
# leptos-use = { version = "0.15.5", features = ["use_cycle_list"] }

# similarity = "0.1.2"
# ndarray = "0.16.1"
# glob = "0.3.2"
# lopdf = "0.34.0"
# enum_all_variants = "0.2.0"
# rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
# reqwest = { version = "*", default-features = false, features = ["json"] }
# tokio = { version = "*", default-features = false }

# [workspace]
# members = ["src-tauri"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
strip = true
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-04"]
