[package]
name = "tauri_gardesh"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_gardesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
tauri-plugin-shell = "2.2.0"
iter_tools = { version = "0.24.0", features = ["full"] }
dotenv = "0.15.0"
# reqwest = { version = "0.12.9", default-features = false, features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
# tokio = { version = "1.41.0", features = ["full"] }
kalosm = { version = "0.3.2", features = ["language", "vision", "surrealdb"] }
vec-embed-store = { path = "vec-embed-store" }
tauri-plugin-log = "2.2.0"
rstar = "0.12.2"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
genai = "0.1.17"
enum_all_variants = "0.2.0"
strum = "0.26.3"
